# tgcloud

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
tgcloud-cli/: Cargo.toml
tgcloud-cli/src/: main.rs  ui.rs
tgcloud-cli/src/web/: mod.rs
tgcloud-cli/templates/: index.html
tgcloud-core/: Cargo.toml
tgcloud-core/src/: bot_manager.rs  config.rs  errors.rs  lib.rs  models.rs  service.rs  storage.rs  telegram_client.rs
