[workspace]
members = [
    "tgcloud-core",
    "tgcloud-cli",
]
resolver = "2"

[workspace.dependencies]
tgcloud-core = { path = "tgcloud-core" }
tokio = { version = "1.34", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.8.0", features = ["tokio-runtime"] }
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
url = "2.5"
tokio-util = { version = "0.7", features = ["codec", "io"] }
indicatif = "0.17"
