[package]
name = "tgcloud-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tgcloud-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indicatif = "0.17"
console = "0.15"
comfy-table = "7.1"
owo-colors = "3.5"
tracing = "0.1"
tracing-subscriber = "0.3"
human_bytes = "0.4"
