[package]
name = "tgcloud-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tgcloud-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }
console = "0.15"
comfy-table = "7.1"
tracing = "0.1"
tracing-subscriber = "0.3"
human_bytes = "0.4"
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
askama = { workspace = true }
askama_axum = { workspace = true }
mime = { workspace = true }
urlencoding = { workspace = true }
chrono = { workspace = true }
owo-colors = { workspace = true }
